--- a/index.html
+++ b/index.html
@@ -3,5 +3,18 @@
     <head>
         <title>Sebastian Martinez</title>
         <link rel="shortcut icon" type="image/x-icon" href="assets/sm.ico"/>
+        <link rel="stylesheet" href="style.css">
     </head>
+    <body>
+    	<div class="container">
+            <div class="wrapper">
+              <div class="content">
+                <div class="item">
+                  <h1>COMING SOON</h1>
+                  <p>Hardly working.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+    </body>
 </html>
